--- a/lesson 2 Enemies/lesson2.html
+++ b/lesson 2 Enemies/lesson2.html
@@ -105,7 +105,7 @@
                 <h2>Step 1: Create One Enemy Rectangle</h2>
                 <p>We’ll start with just one enemy fish — a red rectangle that moves across the screen.</p>
                 <h3>✅ Code Reference</h3>
-                <p>Add this code after your arrow key movement:</p>
+                <p>Add this code after player declaration and before the game loop:</p>
                 <a href=https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%202%20Enemies/step1_enemysprite.html
                    class="step-link" target="_blank">👉 View Step 1 Code</a>
                 <img width="100%" src="screenshots/image1_oneenemy.png" alt="Enemy rectangle example">
@@ -171,7 +171,7 @@
 
             <section>
                 <h2>Step 5.2: Spawning New Enemies</h2>
-                <p>Inside your <code>update()</code> function, check the timer and create a new enemy when it reaches 0.
+                <p>Inside your Game Loop's <code>update()</code> function, check the timer and create a new enemy when it reaches 0.
                 </p>
                 <p>Each new enemy gets a random height and speed and is pushed into the <code>enemies</code> array.</p>
                 <a href=https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%202%20Enemies/step5.2_spawningnewenemies.html
