updated renders to draw functions to fix collision issues.

--- a/lesson 1 fishy intro/lesson1.html
+++ b/lesson 1 fishy intro/lesson1.html
@@ -128,7 +128,7 @@ kontra.init('game');
                 <p><strong>Key ideas:</strong></p>
                 <ul>
                     <li><code>update()</code> runs every frame to update position.</li>
-                    <li><code>render()</code> draws the sprite.</li>
+                    <li><code>draw()</code> draws the sprite.</li>
                     <li><code>fillRect()</code> draws a rectangle using x, y, width, and height.</li>
                 </ul>
                 <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step3_player_sprite.html"
