--- a/lesson 1 fishy intro/step5_arrowkeymovement.html
+++ b/lesson 1 fishy intro/step5_arrowkeymovement.html
@@ -29,8 +29,8 @@
                     if (keyPressed('arrowright')) this.x += 2;
                     if (keyPressed('arrowup')) this.y -= 2;
                     if (keyPressed('arrowdown')) this.y += 2;
-            },
-                render() {
+                },
+                draw() {
                     this.context.fillStyle = this.color;
                     this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
@@ -40,7 +40,7 @@
                     player.update();
                 },
                 render(){
-                    player.render();
+                    player.draw();
                 }
             });
             loop.start();
