--- a/lesson 1 fishy intro/step6.1_loadimages.html
+++ b/lesson 1 fishy intro/step6.1_loadimages.html
@@ -32,7 +32,7 @@
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
                     },
-                    render() {
+                    draw() {
                         this.context.fillStyle = this.color;
                         this.context.fillRect(this.x, this.y, this.width, this.height)
                     }
@@ -42,7 +42,7 @@
                         player.update();
                     },
                     render() {
-                        player.render();      // then draw fish
+                        player.draw();      // then draw fish
                     }
                 });
                 loop.start();
