--- a/lesson 1 fishy intro/step6.2_backgroundimage.html
+++ b/lesson 1 fishy intro/step6.2_backgroundimage.html
@@ -42,7 +42,7 @@
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
                     },
-                    render() {
+                    draw() {
                         this.context.fillStyle = this.color;
                         this.context.fillRect(this.x, this.y, this.width, this.height)
                     }
@@ -52,7 +52,7 @@
                         player.update();
                     },
                     render() {
-                        player.render();
+                        player.draw();
                     }
                 });
                 loop.start();
