--- a/lesson 2 Enemies/step1_enemysprite.html
+++ b/lesson 2 Enemies/step1_enemysprite.html
@@ -36,11 +36,15 @@
                     width: 40,
                     height: 30,
                     image: playerImage,
+                    wasEaten: true,
                     update() {
                         if (keyPressed('arrowleft')) this.x -= 2;
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
+                    },
+                    draw() {
+                        this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
                     },
                 });
                 let enemy = Sprite({              // lesson 2 start, Creating one enemy rectangle
@@ -53,7 +57,7 @@
                     update() {
                         this.advance();
                     },
-                    render() {
+                    draw() {
                         this.context.fillStyle = this.color;
                         this.context.fillRect(this.x, this.y, this.width, this.height);
                     }
@@ -64,9 +68,9 @@
                         enemy.update();
                     },
                     render() {
-                        background.render();
-                        player.render();
-                        enemy.render();
+                        background.draw();
+                        player.draw();
+                        enemy.draw();
                     }
                 });
                 loop.start();
