--- a/lesson 2 Enemies/step6.1_collisiondetection.html
+++ b/lesson 2 Enemies/step6.1_collisiondetection.html
@@ -26,7 +26,7 @@
                     image: backgroundImage,
                     width: canvas.width,
                     height: canvas.height,
-                    render() {
+                    draw() {
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
@@ -41,6 +41,9 @@
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
+                    },
+                    draw() {
+                        this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
                     },
                 });
 
@@ -74,7 +77,7 @@
                                     this.advance();
                                     if (this.x + this.width < 0) this.ttl = 0;
                                 },
-                                render() {
+                                draw() {
                                     this.context.fillStyle = this.color;
                                     this.context.fillRect(this.x, this.y, this.width, this.height);
                                 }
@@ -87,9 +90,9 @@
                         enemies = enemies.filter(e => e.isAlive());  // remove dead enemies
                     },
                     render() {
-                        background.render();
-                        player.render();
-                        enemies.forEach(e => e.render());    //render all enemies
+                        background.draw();
+                        player.draw();
+                        enemies.forEach(e => e.draw());    //draw all enemies
                     }
                 });
                 loop.start();
