--- a/lesson 3 Player Growth, Score, and Sprite Images/step1_scoretracking.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/step1_scoretracking.html
@@ -26,7 +26,7 @@
                     image: backgroundImage,
                     width: canvas.width,
                     height: canvas.height,
-                    render() {
+                    draw() {
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
@@ -41,6 +41,9 @@
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
+                    },
+                    draw() {
+                        this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
                     },
                 });
 
@@ -84,7 +87,7 @@
                                     this.advance();
                                     if (this.x + this.width < 0) this.ttl = 0;
                                 },
-                                render() {
+                                draw() {
                                     this.context.fillStyle = this.color;
                                     this.context.fillRect(this.x, this.y, this.width, this.height);
                                 }
@@ -104,10 +107,10 @@
                         scoreText.text = 'Score: ' + score;     //Update score text
                     },
                     render() {
-                        background.render();
-                        player.render();
-                        enemies.forEach(e => e.render());
-                        scoreText.render();    //Render score text
+                        background.draw();
+                        player.draw();
+                        enemies.forEach(e => e.draw());
+                        scoreText.draw();    //draw score text
                     }
                 });
                 loop.start();
