updated renders to draw functions to fix collision issues.

--- a/lesson 2 Enemies/lesson2.html
+++ b/lesson 2 Enemies/lesson2.html
@@ -111,7 +111,7 @@
                 <img width="100%" src="screenshots/image1_oneenemy.png" alt="Enemy rectangle example">
 
                 <p>This red rectangle acts as the bad fish. It starts on the right side (x: 800) and slowly moves left
-                    because of <code>dx: -2</code>. The <code>update()</code> function keeps it moving, and <code>render()</code>
+                    because of <code>dx: -2</code>. The <code>update()</code> function keeps it moving, and <code>draw()</code>
                     draws it.</p>
                 <img width="100%" src="screenshots/image3_rectangleenemy.png" alt="Enemy rectangle example">
             </section>
