updated renders to draw functions to fix collision issues.

--- a/lesson 1 fishy intro/step6.2_backgroundimage.html
+++ b/lesson 1 fishy intro/step6.2_backgroundimage.html
@@ -26,7 +26,7 @@
                     image: backgroundImage,
                     width: canvas.width,
                     height: canvas.height,
-                    render() {
+                    draw() {
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
