--- a/lesson 2 Enemies/step1_enemysprite.html
+++ b/lesson 2 Enemies/step1_enemysprite.html
@@ -26,7 +26,7 @@
                     image: backgroundImage,
                     width: canvas.width,
                     height: canvas.height,
-                    render() {
+                    draw() {
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
