--- a/lesson 2 Enemies/step5.2_spawningnewenemies.html
+++ b/lesson 2 Enemies/step5.2_spawningnewenemies.html
@@ -26,7 +26,7 @@
                     image: backgroundImage,
                     width: canvas.width,
                     height: canvas.height,
-                    render() {
+                    draw() {
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
@@ -66,7 +66,7 @@
                                     this.advance();
                                     if (this.x + this.width < 0) this.ttl = 0;
                                 },
-                                render() {
+                                draw() {
                                     this.context.fillStyle = this.color;
                                     this.context.fillRect(this.x, this.y, this.width, this.height);
                                 }
@@ -79,9 +79,9 @@
                         enemies = enemies.filter(e => e.isAlive());  // remove dead enemies
                     },
                     render() {
-                        background.render();
-                        player.render();
-                        enemies.forEach(e => e.render());    //render all enemies
+                        background.draw();
+                        player.draw();
+                        enemies.forEach(e => e.draw());    //draw all enemies
                     }
                 });
                 loop.start();
