updated renders to draw functions to fix collision issues.

--- a/lesson 1 fishy intro/step2_kontra_setup.html
+++ b/lesson 1 fishy intro/step2_kontra_setup.html
@@ -17,9 +17,7 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-
-            // enable keyboard
-            initKeys();
+            initKeys();       // enable keyboard
         </script>
     </body>
 </html>
