--- a/lesson 3 Player Growth, Score, and Sprite Images/Step4_loadenemies.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/Step4_loadenemies.html
@@ -14,13 +14,18 @@
     </head>
     <body>
         <canvas id="game" width="800" height="600"></canvas>
+
         <script>
-            let {init, Sprite, GameLoop, initKeys, keyPressed, load, Text} = kontra;
+            let {init, Sprite, GameLoop, initKeys, keyPressed, load, Text, assets} = kontra;
             let {canvas, context} = init('game');
+
             initKeys();
-            load('background.png', 'player.png').then(images => {
-                let [backgroundImage, playerImage] = images;
-                let background = Sprite({
+
+            kontra.load('background.png', 'player.png', 'enemysmall.png', 'enemybig.png').then(images => {     //Load ALL images at once
+
+                let [backgroundImage, playerImage, enemySmallImage, enemyBigImage] = images;
+
+                let background = Sprite({         //Background sprite
                     x: 0,
                     y: 0,
                     image: backgroundImage,
@@ -30,15 +35,15 @@
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
-                let player = Sprite({
+
+                let player = Sprite({       //Player sprite
                     x: 100,
                     y: 100,
                     width: 40,
                     height: 30,
                     image: playerImage,
-                    size: 20,              //add this line so my fish can eat smaller enemies
+                    size: 20,
                     update() {
-                        console.log(this.x + "," + this.y);
                         if (keyPressed('arrowleft')) this.x -= 2;
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
@@ -46,10 +51,10 @@
                     },
                     draw() {
                         this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
-                    },
+                    }
                 });
 
-                let enemies = []; // preparing an enemy list
+                let enemies = [];
 
                 function isoverlapping(min1, max1, min2, max2) {
                     return max1 >= min2 && max2 >= min1;
@@ -62,9 +67,43 @@
                     );
                 }
 
-                let spawnTimer = 60; // 60 frames = ~1 second
+                function createFish() {          //CREATE FISH USING IMAGES (instead of rectangles)   {
+                    let size = Math.random() * 20 + 10;
+                    let enemyImage = size < 25 ? enemySmallImage : enemyBigImage;
 
-                let score = 0;    //Added score tracking
+                    return Sprite({
+                        x: canvas.width,
+                        y: Math.random() * (canvas.height - size),
+                        width: size,
+                        height: size,
+                        dx: -(Math.random() * 2 + 1),
+                        image: enemyImage,
+                        wasEaten: false,
+
+                        update() {
+                            this.advance();
+                            if (this.x + this.width < 0) this.ttl = 0;
+
+                            if (iscolliding(player, this) && !this.wasEaten) {
+                                if (this.width * this.height < player.size * player.size) {
+                                    this.wasEaten = true;
+                                    player.size += 2;
+                                    player.width = player.size;
+                                    player.height = player.size;
+                                    score += 1;
+                                    this.ttl = 0;
+                                }
+                            }
+                        },
+
+                        draw() {
+                            this.context.drawImage(this.image, this.x, this.y, this.width, this.height);
+                        }
+                    });
+                }
+
+                let spawnTimer = 60;
+                let score = 0;
 
                 let scoreText = Text({
                     text: 'Score: 0',
@@ -74,27 +113,12 @@
                     y: 10
                 });
 
-                let loop = kontra.GameLoop({
+                let loop = GameLoop({
                     update() {
+
                         spawnTimer--;
                         if (spawnTimer <= 0) {
-                            let newEnemy = kontra.Sprite({
-                                x: 800,
-                                y: Math.random() * (canvas.height - 30),
-                                width: Math.random() * 50 + 10,
-                                height: Math.random() * 30 + 10,
-                                dx: -(Math.random() * 3 + 1),
-                                color: 'red',
-                                update() {
-                                    this.advance();
-                                    if (this.x + this.width < 0) this.ttl = 0;
-                                },
-                                draw() {
-                                    this.context.fillStyle = this.color;
-                                    this.context.fillRect(this.x, this.y, this.width, this.height);
-                                }
-                            });
-                            enemies.push(newEnemy);
+                            enemies.push(createFish());   //now spawns IMAGE ENEMIES
                             spawnTimer = 60;
                         }
 
@@ -102,31 +126,17 @@
                         enemies.forEach(e => e.update());
                         enemies = enemies.filter(e => e.isAlive());
 
-                        enemies.forEach(e => {
-
-                            if (iscolliding(player, e) && !e.wasEaten) {               //Updated collision logic
-                                if (e.width * e.height < player.size * player.size) {
-                                    e.wasEaten = true;
-                                    e.color = "blue";     // Optional visual feedback
-                                    player.size += 2;
-                                    player.width = player.size;
-                                    player.height = player.size;
-                                    score += 1;
-                                } else {
-                                    console.log("That fish is too big!");       // Optional: shrink player or end game
-                                }
-                            }
-                        });
-
-                        scoreText.text = 'Score: ' + score;     //Update score text
+                        scoreText.text = "Score: " + score;
                     },
+
                     render() {
                         background.draw();
                         player.draw();
                         enemies.forEach(e => e.draw());
-                        scoreText.draw();    //draw score text
+                        scoreText.draw();
                     }
                 });
+
                 loop.start();
             });
         </script>
