--- a/lesson 3 Player Growth, Score, and Sprite Images/step1_scoretracking.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/step1_scoretracking.html
@@ -110,7 +110,7 @@
                         background.draw();
                         player.draw();
                         enemies.forEach(e => e.draw());
-                        scoreText.draw();    //draw score text
+                        scoreText.render();    //draw score text
                     }
                 });
                 loop.start();
